@@ -172,6 +172,9 @@ Show only file paths matching the specified regular expression.
 \fB\-\-user\-filter REGEX\fR
 Filter usernames matching the specified regular expression.
 .TP
+\fB\-\-user\-show\-filter REGEX\fR
+Show only usernames matching the specified regular expression.
+.TP
 \fB\-\-user\-image\-dir DIRECTORY\fR
 Directory containing .jpg or .png images of users (eg "Full Name.png") to use as avatars.
 .TP
